Change deploy file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: 20        # or 22, 18 — whatever your project uses
 
       - name: Install dependencies
-        run: npm ci               # or yarn install --frozen-lockfile
+        run: npm install               # or yarn install --frozen-lockfile
 
       - name: Build
         run: npm run build
